<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">RadioÑu</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
	<string name="play">play</string>
	
	<!-- CADENAS TEMPORALES -->
	<string name="testing">Texto de prueba para el fragmento playerfragment</string>
	
	<!-- CADENAS DE LA INTERFAZ GENERAL-->
	<string name="subtitle">La emisora del ñu que te da nota</string>
	<string name="contentImagePlayer">Imagen del track que actualmente esta tocando</string>
	<string name="estadoReproductor">Ahora Reproduciendo</string>
	<string name="estadoVivoReproductor">EN VIVO</string>
	<string name="TituloTrack">Titulo del Track</string>
	<string name="AlbumTrack">Album del Track</string>
	<string name="ArtistaTrack">Artista</string>
	<string name="Country">Pais</string>
	<string name="yearlicence">Año y Licencia</string>
	<string name="contentImagePlayStop">Imagen del boton play y stop</string>
	<string name="MessageRadio">Radio Online</string>
	<string name="MessageRadioPlay">Escuchando Radio</string>
	<string name="message_conn">Conectando a RadioÑu...</string>
	<string name="message_conn2">Buffering...</string>
	<string name="message_exit_app">¿Estas seguro de cerrar RadioÑu?</string>
	<string name="message_title_exit_app">Confirme</string>
	<string name="botonYes_message_exit_app">Sí</string>
	<string name="splashscreen_message_progressdialog">RadioÑu la estación que te da nota</string>
	<string name="splashscreen_message_checknetwork">Verificando conexión a la red...</string>
	<string name="splashscreen_message_no_network">No se detecto conexión a Red...</string>
	<string name="splashscreen_message_no_api">No se encuentra disponible RadioÑu</string>
	
	<!-- CADENAS DE SERVICEPLAYERSTREAMING -->
	<string name="exit_service">Saliendo de RadioÑu</string>
	
	<!-- CADENAS CONECTIVIDAD -->
	<!--string name="URL_AUDIO">http://172.18.29.109:8080</string-->
	
	<string name="PUBLIC_API">http://radiognu.org/api</string>
	
	<!-- CADENAS CONECTIVIDAD 16k-->
	<string name="URL_AUDIO">http://audio.radiognu.org/radiognuam.ogg</string>
	
	<string name="IMG_RADIOGNU">data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAKgAAADfCAMAAABVsmj/AAADAFBMVEUCAgkCAgcDAwwCAgkCAggCAggBAQYAAAEBAQcCAggAAAACAgoCAggAAAACAgcDAwsDAwsDAwsDAwsAAAACAgkAAAQAAAECAgYAAAADAwwBAQcAAAACAgoAAAAAAAACAggAAAECAggAAAACAggDAwsAAAAAAAACAgoAAAAAAAEAAAADAwsAAAACAggAAAACAgkAAAAAAAAAAAAAAAAAAAACAggCAgkAAAABAQYAAAEAAAACAgoAAAIAAAAAAAAAAAEAAAACAgkAAAAAAAIAAAAAAAACAggAAAADAwsAAAAAAAAAAAACAgkAAAAAAAAAAAAAAAAAAAABAQQAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAABAQQAAAAAAAAAAAAAAAAAAAAAAAAAAAABAQYCAgoCAgkfGQACAggBAQYBAQYDAw2dfgDmuABAMwC9nD+4kwCqiAiMfKzWsD2khiqpiiqujirIplKQdiiLcidyWwC7lgCBaRk9MQC9lwBOSZ3wwRBaWPhdW/PzwwCAZgCmjYeYhJv6yQcXEwDkuSdiXuyFdrgjHACvlHmbfil7b8d0a9FSQgC1lCoCAgD8ygDCoFm7mjqTgKO4lzDpvB6fiZAlJXFISNkGBhO3mmxXVvxsZd0hIWYjI2w6Oq8fH14HBxgMDCQHBxZGRtIUFD01NZ9KSt9FRc83N6U9PbgWFkIiImkJCR0aGk9NTegbG1IsLIUtLYlRUfQJCRsrK4FOTulPT+0yMpYcHFQxMZMMDCZHR9UXF0UODisuLoxERMw4OKggIGQRETRLS+EYGEk8PLU/P78wMJFMTOYeHlw/P71AQMM4OKpLS+MDAw0NDSgtLYcvL44zM5ooKHomJnQgIGEVFUA+ProZGUxISNgQEDAcHFcTEzkKCh42NqJJSdw6Oq5DQ8kqKn4KCiESEjYPDy0nJ3dSUvdOTutCQsY0NJwICBpQUPJPT+87O7FUVPwlJW9TU/oBAQUAAAJUVP4GBhQAAAH/zAADAwwAAAABAQVVVf9oULfkAAAAY3RSTlP9/f7E2PzqfOOucPK0Lqvo4cruEMiig6BJ3LEczT4hwYj3bO7qYE7ADH5d5B75W9UxdmZLbrndeqeLPdKUY1iBcb1FkD8WtjTYAmk79CsZhSdRlw45QnQKNyQSmwcFVAMBSABmBiZpAAAPD0lEQVR42u3dd1QUWb7Acd+Zec6YMeeAARERJeeccxMboYG2Gk6d0y/nnDbvztvd2Uk7O/bOqpgjJhQUREQQQdBDkAySgwRpqDoU3PN73dAsMHTDLWzqMue8z7/9B99zq6vq3lvdzRKKDwejCEpvjI5JKXw8QkWbjsg4M711+iJ05ECi/kNNrbmLl2pl6/UW6r+t745iX4JUv6GSj9jbr/ovLjWl9Cd+Q2f63VEDD32GnljR/hxulR5dT+mT8YelRf1tzOYIfYWaWtM5Srhw1kdC6ZfYevgCNHckn9BPaCBzswiggPb0p/TN35OuASiUbY7QQ6gLWwYAmWwAtRAC2F5QDSrt9d6htsxLAOUN5gS1MCyZLgAoZ0zeLzR+o7wEoD/7SDC1UI7JGoYACmQfvU+ov3VqM0B+lo03tXBMlza+A2iVxyXOPzS8Lx3giWKlhFpI6x2zXgGc7FspnW+oubwZoIUJlVILS+JzPh/gleLQPENNZK0AL9kD1ILz39aeAdDDWs4rNIotAKhhEigBxG+oTwOoYETzCF3FVAD0yCwoQRjbXFcCVO0z5h0aa9gGcCHJnBKId9B9gKF6dynf0N3VAGmpnpRgYpgrAEWKQzxDbYczAJ7axFPCCT3XDdDDWPIK9WJ6AAoYESWg+DVdoDmhsENDZOUAkBVNCcqBfgcAT9cZY4fGO9YCQCsTQQnL4C6oT6iV2KH2qf0AkBJHCcxlWAnqEyoaM9SIuQIqfZZChybSNaDynI3BCt3F9IJKP7edEtrBMlDr+hAnNNGmAdR6GEpwh2pBrV+egBHqNtwPasW08KFbzsOY++4Yoet6YUzNEuFDoxQw5lry3KFidBLGlBAY0bBUGJOPxHOPKF0DY9JRrOChBx7DmDoknTt0Qw6Mk0cJHurUAGNaGYz3qH2DJvSZp9Cd/vQAjLm6DiPU5JwmdEAWL3CoQ/IQjHkahxF6HBXBGKXCTODQD6pg3BszjFDKphzGPaCNhb3VJ6XDmAxuO06oVakmVNkZLmTnelkFjGsypHBCvVEdjHuUJOCMVPJB3sQAvbHCCqV8HoJGK+2aKNTMyfpcxsSA/okEL/Q4+wQ0es7aCLMc8f24vWhiQFMDcCfOno0wof8pt9UqZIErpTs3soPdoJGZLMENjWXK4Y9elXdyjhbeC3bIRS6ef0qnPIEJJYwH/uJuJzsAU1wuy0K0wbZQ56hd8fo5cUKCd4Y5R++JszZg2XMvcrunjIsims9y+YDsCUyTX9z7+mGnHHFH/Na6L9sYbr/J1i3ggIuRh0NMZExkZGRgZKCKQ6CDys6dO728vKI8LMMSXEycLfa6RdseCt1j7xS+2W6Zj/uONaMMQpz8Xuf1hsH7vU+6Yarux6v5bUBsSh4ALdIeDTwov9NWebrq4bPqjs5z94blSUlJoxPkUyiG+1Lbsx7X5zVWZ9febnjx9MZgZVfb/bLMq9dam9+BdhkXDST8QqkDbBsIri7VMZb3bl4knZ0PwqpJioufx/5oiDXzOg2E0zzI7p3n1rjXx4pLQ0KNZja3O3L+T0Wcj8hfv4IF9+5BO+N0/L0eiCWG7eBuFithAaXlZrP7l0e8/7PQ4Dhm9GHuO1gQQwO3ZUGbgvX0GFzi4WTIdeTUgZ4pa1KSaU9f/X4CItjcD/UNFmOdW78HDBlXbyczcV7++v9MCRVrto2hb15Kh7n85A8wh5M5edw+e4dEnh9+wRfvZb8C1d89CbP5duSLWYey5ptUznG55iTHD+VNFH0UvelqBZ3+Z+TzX+k4dXoKG/o4epmL+hznH8pfrIkPU/0IdPj5yMh/aT/4d1lH+wRTCgNGKG5rHHtKxw32DyMjIz/7OWhxzo1SETaUiv84W6k7dORvv4WZni41FjxUsq29H7T79YiatmvUUOfuCIFDg/c/vgw6/Orrv1KXfgUzFdUHHRM01IK9MQQ6Q/8SffJnIyM/+TXMpPyGDRAuNOro6BnQ7RdfIoQ+/cHI19+CFgWjRz0WJNR4u+hYoEeYkW+Iv2aJ6iirfAuzht4sz0Kf/PnIL0Cbt5W0JtVYFHUgOsDEKMpXFPseod6RZofsttIIcYx8+E2qDHGjG0ItzHcwg+kwq7/5chCgafQvPv8SQEeq7ENP+7UyhBSl1R2l9xQ0h5jDK0MPOIRI+YWGWLoepNFo6c3XvcWXJ66WGVcKymrrr1fegjl89VtVKNQ9/uFfK0FXatmpF+Ul+X98XZne09R2uzQJMWtdt8TihMaLjA6pGs/evFucATrghUJa52cFwFNGSU7tMApavTdGrDPUO9DZ/uAKjrtXW1aTAe/jx+OhUDdaBfNR1NLVQXNrNu6NiZgWuj7BKtTOhkFJnS/unqnTw2Lud78ZD4WBqzBfyrqm0/UyxBr6+XhGJ+xSh7oyZzseVlaUpAMG7FC9UL56MlDRVnWxnY2WLvFGA6BnP8IMxdeCti8xZZ8v/tASVqo69Ap9D+n//oOeQ9P7PNUnkwXzMEO/oX+v39D8Tnd/dSi1/aD8pV5D/64S9OfWDdZHPHEddZHl9b4Dffn9L1/r76hXMht8p1zwY5cfZmoHMK6hFy7ldLX19swR2gaz6el9WVDSjFNZ0cg5Onz3zhS8J3n0aQnMor+laphbs9ZumR/T3qJjpfzVF//44y9+eR90u5TKbl1jKENJHZW5b2c75A8aucO2Im33ev8oO+Z8yqVm0KY5p5GlNyaM39TEVmyLtszffT2i9k9ls/x9xmps3RTh5bYsiMvO7QYt0mra8jgD8+O6JyXiME8DTlFbeEUJUyh7ut6go7ZTFxEBCm3HfGTcP+eATt84Tl3Q7Bmlb+f2Tz/eLYOlnMx9uemc0zxxlOsOVtZefepO0/PWgd6ywZtyxscslprGmL0y89Y5ovFvhaDTcBg1ldTB05CtbqsouPCuqCe37FR1HwqycxZhT5zjfV3MndwP00zQVve4TR5adtaZmSfU1xOhnz4AndiZi7tg25VbRzmEmDW7nczDQvS7ChWj/JnLeY3Pf1oBumQgHSFS74gFWS5HoKKZy3mNH6Im0OUkihd4A2Lme/S/fzaW+YN/+QzVgS7PaUrg0CMzlxn/+R+qzn/9BKHHoFP5WqFDbXpnRBR/9u+f/hQhJH8COjXsETrU/c7MCXk2Unv2CnRrdxE6NPQZzDD0Wi672ASz6OZEQofGyLqBv1Y2UehQqawA+Cv3E34jN64K+MuLFj7UUgG8veWOCx8qYVqBr979lPChlE8X8FXtSiLU5A3w1M+uIhEai5qBn6uGFIlQyjEH+Km1JxO69zHw0i2LJBMagvKBjwFaSiaU8isHPhrCKUKhbvXAw1CSF6lQU1QE+K7JEkmFUgaZgK9qM0Us1DwPsCnlJ8iFHkfvANdzJp5cKEUXA67TqymCoRvuAq7GvSRDQ2sBV3sCyVCresA1vIVIKP/1SKMbydCt+BfSSjuCoVKmBHC9DCIYuovHdfQWCiEXGnYe8PUlkAs9lA34XjiRC/V5Dfh615ALDXoJ+OqQmFSoBNUBvm60i1ToLpQGPDC+pEIjk4GP4ROkQhPeAB9ZZqRCrRqBj0YrUqGhD4GPZx8RC20APuotSIW63gY+zlqSCrWtBT6YY6RCoy8CDxnIm1So5TDwcIGTktvSyQB8A0fITUqY54CvayW5UMdCwNe5l1yoeTVgS2NXkQtdxXQDrmJGSnLv6RrganOnCIZuPg24OtxIhob1AaZuxpdkaARXh/0W9ScZSjmW419FiYZGNwKeUguyoSK2H/NJvSnZUMqwBXDkBlGEQ51SAEdVONFQ/KleXwLp0O1YO49DXDDpUAprL/cRkhAP9XuAEdoSRBEPjbuBEVq2m3zo5m9w7ksbyYfuKMQZ0YPkQ4POYIRWbCUeKmGv4JxMK4iHbpED1uUplmgo/kPGeyaEQ6V0AeDosiYc6kt3A45WRkI2dNMzwCOPIhvqVwh4broSDZWwTwDPAz+ioZEyJeCpY8UkQ80bAZfcg2Soexvguh1KMFQqw997KtxBMFSE+gHXtSUEQ43OArbLSEwudHkjYFOS3Mj1rAJ8bxLIhR68w+tRKLnQ/VcBX+VqcqFMD+DrNSAWGotuAb5imlioLwM8PEJSUqFGfcDDLRRLKjShHXhQciJSoS5ZwEdSJKlQk8fAR58lqVDneuDj/BZSoRZ5wIciilTo3o7vyXs0oON78uGXKAWvCz4rIRUagt4Cvsyj5CYlSx/w+lIouVDn1G7A1cKKyIVKDJ4pAU++PIDkut57X1YPYFBm0svIbpIZ72FL257MNZoPOmnijxipEIsPWMXTgeYhmKm7ubjpzql25BcdQXwPX00cZpeM0HBeyv2mMy0tL1Vym8puZGfJEaIPHww3Uc9DF0WomkR0IsDe+vCKFetU9u9X9ZmbeR3XXOIXU6gO/x/KV/AJbTw8orx2BkbGxPgeO3ZcvChC4+hhLRQKhVw+OppMyxiGQ8yKo9v2iEiHDsIchvJbByruZ3Phiz1U49FowiINvZSS0w1TNIQSDXU6BdrdkXnuy4YpuuyIhgbkgVZv6TBqF5sPkzJ3EA2NoUGr0x+qXjQcgEn3rYmGilEzqKUPwVSXWfWKc00uTLroRjBUHdMLKk2oNGPamTM2fFt7p8xI6RiyoW6PQeVFuE3blKi28f2wtYVTf5Iqnmxo7Nhj28Fw51KYUJNlGDjjd8tS7EhPSlanqM+UlSKk1CQVs65izUuvYcI7JoZ0aCCToX5+GIvSNRcmRbSWu0HhYfLTPJsugCYDKXqkOca7qQn2VTDhjTP50Bj2JJxZMfG7FflsMDXB9SFonGHE5EMpu+vqJx7rXoLaKffJF2yfaTqV52ypRRDqzTS1MpRjJqikMYFTLl3VmtCrtHgxhFIJbPYKalsbqLykpVMmAo2aAe2zIj7DHxfD2FJON0DloZOWrfOKI5JFEkpt96b2NADAUHIUNcmsFNQuJyWQXzN95/9659KJM55DDXVuXgSLu0nR1wGgMXT6D1UOAcCN/eJFFare0L8w/bv+iUwPZDyTBS+G5fK0f5etrI+jptnwuub8Du9Fsa6f9obMlEVQ04Sx7CH/xbFTMsmy75EsjPqO9fGLZUtnUtRon9Mi3nuaFIM2JH4vQlctXb+Yd/MmmR6nFtL/ATqp5cfEFdWdAAAAAElFTkSuQmCC</string>

</resources>
