<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    android:orientation="vertical" >

    <LinearLayout 
        android:orientation="vertical"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
	    android:layout_width="match_parent"
	    android:layout_height="0px"
	    android:layout_weight="7">

        <!--LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1" 
            android:orientation="horizontal">
    
	        <TextView
	            android:id="@+id/textEstado"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/estadoReproductor"
	         />
	        <TextView
	            android:id="@+id/textEstadoVivo"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/estadoVivoReproductor"
	            android:layout_marginLeft="10dp"
	            style="@style/NoLive"
	         />
        
        </LinearLayout-->
        
        <ImageView
            android:id="@+id/imageTrack"
            android:layout_width="match_parent"
            android:layout_height="0px"
            android:layout_weight="20"
            android:contentDescription="@string/contentImagePlayer"
            android:scaleType="fitXY"
            android:src="@drawable/radiognu" />
		
		<TextView
		    	style="@style/textNormalFragmentPlayer" 
		        android:id="@+id/textTitulo"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/TituloTrack"
		    />
		<TextView 
		    style="@style/textNormalFragmentPlayer"
		        android:id="@+id/textArtista"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/ArtistaTrack"
		    />
		
				<TextView 
				    style="@style/textNormalFragmentPlayer"
		        android:id="@+id/textAlbum"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/AlbumTrack"
	            android:layout_weight="1"        
		    />

		
		<TextView 
		    style="@style/textNormalFragmentPlayer"
		        android:id="@+id/textCountry"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/Country"
	            android:layout_weight="1"
		    />
		
		<TextView 
		    style="@style/textNormalFragmentPlayer"
		        android:id="@+id/textyearlicence"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/yearlicence"
	            android:layout_weight="1"
		    />

		
		<WebView
		    android:id="@+id/webView"
		    android:layout_weight="1"
		    android:layout_width="0px"
		    android:layout_height="0px" />
		    />
		
	</LinearLayout>
    
    <RelativeLayout 
        android:layout_width="match_parent"
    	android:layout_height="0px"
    	android:layout_weight="1">

        <ImageView
            android:layout_centerInParent="true"
            android:id="@+id/imageControlRadio"
            android:contentDescription="@string/contentImagePlayStop"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:src="@drawable/ic_media_play" />
		<!--TextView 
		    	android:layout_marginTop="5dp"
		    	android:layout_marginLeft="10dp"
		        android:id="@+id/textMessageRadio"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/MessageRadio"
		    /-->

        
    </RelativeLayout>

    <LinearLayout 
        android:orientation="vertical"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
	    android:layout_width="match_parent"
	    android:layout_height="0px"
	    android:layout_weight="1">
        
        <SeekBar
            android:id="@+id/sbVolume"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/imageControlRadio"
            android:layout_alignParentLeft="true" />
        
    </LinearLayout>
    
</LinearLayout>
